// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-dIZBxk kWoA-Dt tab-link-fill"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-dIZBxk kWoA-Dt tab-link-fill"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-dIZBxk kWoA-Dt tab-link-fill"
>
  <span
    className="sc-khrHlC qICXw"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-dIZBxk kWoA-Dt tab-link-fill"
>
  <div
    className="sc-MEQRl fURVHq"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-dIZBxk kWoA-Dt tab-link-fill"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-dIZBxk iROOFM tab-link-fill"
  size="small"
/>
`;
